--- a/our-work/index.html
+++ b/our-work/index.html
@@ -34,10 +34,13 @@
 
         <section class="banner">
             <h1>Blitz</h1>
-            <h3>Our Cars & Portfolio</h3>
+            <h3>Our Work</h3>
         </section>
 
         <section class="info">
+            <h1>Awards</h1>
+            <p>Yash has no life Chen carried to get both awards Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+            
             <h1>Our Car Designs</h1>
             <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
             
