--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -4,7 +4,6 @@
         <title>Team Blitz | Sponsors</title>
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" type="image/x-icon" href="../global/xs-placeholder.png">
 
         <meta charset="UTF-8">
@@ -14,6 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script src="../global/scripts.js" defer></script>
+        <script src="https://kit.fontawesome.com/5de12ac90d.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -69,9 +69,9 @@
             <p id="copyright">© Team Blitz 2022-2024. All rights reserved.</p>
             
             <div class="social-links">
-                <a href="https://www.instagram.com/team_blitz8" id="insta"><img src="../global/insta.png"></a>
-                <a href="https://twitter.com/team_blitz8" id="x"><img src="../global/twitter.png"></a>
-                <a href="https://tiktok.com/@team_blitz8" id="tiktok"><img src="../global/tiktok.png"></a>
+                <a href="https://www.instagram.com/team_blitz8" target="_blank" id="insta"><img src="../global/insta.png"></a>
+                <a href="https://twitter.com/team_blitz8" target="_blank" id="x"><img src="../global/twitter.png"></a>
+                <a href="https://tiktok.com/@team_blitz8" target="_blank" id="tiktok"><img src="../global/tiktok.png"></a>
             </div>
         </footer>
     </body>
