PATCH: Link to home from sponsor and blog leads to 404 error
Minor cleanups of homepage, addition of learn more link on bottom of introduction

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <nav class="topnav" id="toppy">
-            <a href="./home/" class="logo"><img src="../global/xs-placeholder.png"></a>
+            <a href="../home/" class="logo"><img src="../global/xs-placeholder.png"></a>
             
             <div class="links">
                 <a href="../home" class="link">Home</a>
