--- a/homepage/index.html
+++ b/homepage/index.html
@@ -41,8 +41,9 @@
 
         <section class="info">
             <h1>Who are we?</h1>
-            <p>We are Team Blitz of Saint Olave's Grammar School, a group of 5 dedicated team members with a burning passion for STEM (Science, Technology, Engineering and Maths) and DT. We all came together, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are today! We participated in the 2023 Regionals at London North, entering as an ENTRY class team and came home with 2 awards & coming 2nd in the entry class! We are now working towards the Development class and hope to continue our success!</p>
-            
+            <p style="padding-bottom: 0;">We are Team Blitz of Saint Olave's Grammar School, a group of 5 dedicated team members with a burning passion for STEM (Science, Technology, Engineering and Maths) and DT. We all came together, collaborating with each other with our own various different skillsets and thinking. We thoroughly enjoy the hands-on experience the F1 in Schools club provides us and the teamwork & collaboration skills we have developed on our journey, helping us get to where we are today! We participated in the 2023 Regionals at London North, entering as an ENTRY class team and came home with 2 awards & coming 2nd in the entry class! We are now working towards the Development class and hope to continue our success!</p>
+            <a href="../about-us/">Learn more..</a>   
+                     
             <h1>What is F1 in Schools?</h1>
             <p style="padding-bottom: 0;">F1 in Schools is a fun STEM-based activity with the goal of introducing students to STEM subjects in an engaging way, using the theme of F1 to encourage students to compete. Students create a miniature F1 car with F1-style features to maximise aerodynamics, thinking through aesthetics, manufacturing, sketches and designing on CAD, designing a portfolio to document their journey and even developing a brand to display at the competition and raise funds for getting the best resources possible!</p>
             <a href="https://www.f1inschools.co.uk/about.html" target="_blank">Learn more..</a>
