Add cool thing to homepage

--- a/home/index.html
+++ b/home/index.html
@@ -11,6 +11,15 @@
         <meta name="description" content="Homepage of Team Blitz website">
         <meta name="keywords" content="Team Blitz, St Olave's Grammar School">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#f8ac29">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://teamblitz.pages.dev/">
+        <meta property="og:title" content="Team Blitz | Home">
+        <meta property="og:description" content="Welcome to Team Blitz, a team of 5 ambitious boys from St. Olave's Grammar School competing in the F1 in Schools competition in the Development Class.">
+        <meta property="og:image" content="../global/xs-placeholder.png">
+        <meta property="og:image:height" content="256px">
+        <meta property="og:image:width" content="256px">
+        <meta property="og:sitename" content="Team Blitz">
 
         <script src="../global/scripts.js" defer></script>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
