feat: replace placeholder text

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -66,22 +66,22 @@
                         <h1>Yash Parekh</h1>
                         <h2>ENGINEERING TEAM</h2>
                         <h2>Team Manager & Design Engineer</h2>
-                        <h2 class="join-info">ENTRY CLASS</h2>
+                        <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined December 2022</h2>
                         <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+                        <p>As well as leading the team, Yash has dedicated himself to learning many skills to aid each one of us in our roles, including himself - being the first to start learning CAD (Fusion 360) and organising & delegating tasks. He has also played a massive role in manufacturing: priming, painting, assembling, attaching vinyls and so much more, dedicating hours to the car.</p>
+                        <p>"Working smarter and harder can lead to success" - Yash, 2023</p>
                     </div>
 
                     <div class="person">
                         <h1>Pranit Malhotra</h1>
                         <h2>ENGINEERING TEAM</h2>
                         <h2>Design Engineer</h2>
-                        <h2 class="join-info">ENTRY CLASS</h2>
+                        <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined February 2022</h2>
                         <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+                        <p>Pranit, not only being Design Engineer, has a strong passion for Art which allowed him to draw detailed 3D designs on paper with his incredible art skills, enabling us to start CAD work rapidly. He is also at the head of our Engineering department, designing the car alongside Yash before being sent off for testing. His creative skills have also aided us with designing prototypes, with him creating many unique cars.</p>
+                        <p>"F1 in Schools is an enriching & fun experience!"</p>
                     </div>
 
                     <div class="person">
@@ -91,8 +91,8 @@
                         <h2 class="join-info">FOUNDING MEMBER</h2>
                         <h2>Joined October 2022</h2>
                         <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+                        <p>Chen works on a crucial part of the Design-Test cycle: the testing phase. He manages the CFD testing to feedback results & figures such as drag to Pranit, helping us improve our car, and being able to produce drag and lift values for us to compare other cars against and log in our portfolio. In addition, he manages digital presence side of our brand, even creating this very website! He has also set up our email and Twitter account to use for team-related activities.</p>
+                        <p>"f1 in school is very cool"</p>
                     </div>
                 </div>
                 <div class="second-line">
@@ -100,22 +100,22 @@
                         <h1>Josh Abracadabra</h1>
                         <h2>ENGINEERING/ENTERPRISE TEAM</h2>
                         <h2>Testing Engineer & Business Manager</h2>
-                        <h2 class="join-info">DEVELOPMENT CLASS</h2>
+                        <h2 class="join-info">JOINED DEVELOPMENT CLASS</h2>
                         <h2>Joined January 2024</h2>
                         <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+                        <p>"yash has no life"</p>
                     </div>
 
                     <div class="person">
                         <h1>Rayhaan Smith</h1>
                         <h2>ENTERPRISE TEAM</h2>
                         <h2>Research & Resource Manager</h2>
-                        <h2 class="join-info">ENTRY CLASS</h2>
+                        <h2 class="join-info">JOINED ENTRY CLASS</h2>
                         <h2>Joined September 2023</h2>
                         <img src="../global/m-placeholder.png">
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
-                        <p>Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life Yash has no life</p>
+                        <p>Rayhaan has been interested from F1 for a long time, meaning he was able to contribute a lot to our Initial Ideas from his knowledge of successful F1 cars. He is also very skilled at PowerPoint, laying out our presentations extremely effectively. As Resource Manager, he managed the portfolio, gave a helping hand during the manufacturing process and has a creative vision for the car through his expertise and passion for F1.</p>
+                        <p>"F1 in Schools is extremely fun and rewarding"</p>
                     </div>
                 </div>
             </div>
