--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -4,6 +4,7 @@
         <title>Team Blitz | Contact Us</title>
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
+        <link rel="stylesheet" type="text/css" href="./styling.css">
         <link rel="icon" type="image/x-icon" href="../global/xs-placeholder.png">
 
         <meta charset="UTF-8">
@@ -38,7 +39,29 @@
         </section>
 
         <section class="info">
-            <!--Idk how to lay this out-->
+            <h1>Get in touch with us!</h1>
+            <p>Whether it be a business enquiry or just a question about F1 in Schools in general, we're happy to respond and have a chat with you! We are available through Instagram, Twitter, and e-mail. We will aim to respond to emails and direct messages within a week.</p>
+            <h2 id="titre">Emails</h2>
+            <div class="container">
+                <div class="row">
+                    <a class="button">Contact Whole Team</a>
+                    <a class="button">Contact for Business Enquiries</a>
+                    <a class="button">Contact Enterprise Team</a>
+                </div>
+                <div class="row">
+                    <a class="button">Contact Engineering Team</a>
+                    <a class="button">Contact Yash Parekh, Team Manager</a>
+                    <a class="button">Contact Pranit Malhotra, Design Engineer</a>
+                </div>
+                <div class="row">
+                    <a class="button">Contact Chen Hui Wang, Testing/Digital Manager</a>
+                    <a class="button">Contact Josh Abraham, Testing/Business Manager</a>
+                </div>
+                <div class="row">
+                    <a class="button">Contact Anuoluwapo Silva, Graphic Designer</a>
+                    <a class="button">Contact Rayhaan Smith, Resource Manager</a>
+                </div>
+            </div>
         </section>
 
         <footer>
