--- a/our-journey/index.html
+++ b/our-journey/index.html
@@ -4,6 +4,7 @@
         <title>Team Blitz | Our Journey</title>
 
         <link rel="stylesheet" type="text/css" href="../global/styling.css">
+        <link rel="stylesheet" type="text/css" href="./styling.css">
         <link rel="icon" type="image/x-icon" href="../global/xs-placeholder.png">
 
         <meta charset="UTF-8">
@@ -39,28 +40,44 @@
 
         <section class="info">
             <!--Make timeline graphic-->
-            <div>
-                <h1>Our team is formed as Omega</h1>
-                <p>Yash has no life</p>
-                <p>Yash has no life</p>
+            <div class="container left">
+                <div class="contained">
+                    <h1>Our team is formed as Omega</h1>
+                    <p>Yash has no life</p>
+                    <p>Yash has no life</p>
+                </div>
             </div>
 
-            <div>
-                <h1>Major reshuffle</h1>
-                <p>Yash has no life</p>
-                <p>Yash has no life</p>
+            <div class="container right">
+                <div class="contained">
+                    <h1>Major reshuffle</h1>
+                    <p>Yash has no life</p>
+                    <p>Yash has no life</p>
+                </div>
             </div>
 
-            <div>
-                <h1>London North Regionals 2023 (Entry Class)</h1>
-                <p>Yash has no life</p>
-                <p>Yash has no life</p>
+            <div class="container left">
+                <div class="contained">
+                    <h1>Regionals 2023 (Entry Class)</h1>
+                    <p>Yash has no life</p>
+                    <p>Yash has no life</p>
+                </div>
             </div>
 
-            <div>
-                <h1>New Member</h1>
-                <p>Yash has no life</p>
-                <p>Yash has no life</p>
+            <div class="container right">
+                <div class="contained">
+                    <h1>New Members!</h1>
+                    <p>Yash has no life</p>
+                    <p>Yash has no life</p>
+                </div>
+            </div>
+
+            <div class="container left">
+                <div class="contained">
+                    <h1>New Sponsors!</h1>
+                    <p>Yash has no life</p>
+                    <p>Yash has no life</p>
+                </div>
             </div>
         </section>
 
